--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,7 @@
      </size>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="page">
      <widget class="QPushButton" name="btnMainVegetables">
@@ -99,24 +99,113 @@
      </widget>
     </widget>
     <widget class="QWidget" name="page_2">
-     <widget class="QLabel" name="label">
+     <widget class="QPushButton" name="btnReturn">
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>20</y>
-        <width>61</width>
-        <height>41</height>
+        <y>290</y>
+        <width>80</width>
+        <height>18</height>
        </rect>
       </property>
       <property name="text">
-       <string>Vegetable</string>
+       <string>Go Back</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QScrollArea" name="scrollArea">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>50</y>
+        <x>10</x>
+        <y>10</y>
+        <width>120</width>
+        <height>271</height>
+       </rect>
+      </property>
+      <property name="widgetResizable">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="scrollAreaWidgetContents">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>118</width>
+         <height>269</height>
+        </rect>
+       </property>
+       <widget class="QListWidget" name="listVegetables">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>101</width>
+          <height>251</height>
+         </rect>
+        </property>
+       </widget>
+      </widget>
+     </widget>
+     <widget class="QStackedWidget" name="swVegetables">
+      <property name="geometry">
+       <rect>
+        <x>149</x>
+        <y>19</y>
+        <width>371</width>
+        <height>291</height>
+       </rect>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <widget class="QWidget" name="pageDefault"/>
+      <widget class="QWidget" name="pageTomato">
+       <widget class="QLabel" name="lblTomatoTitle">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>90</y>
+          <width>181</width>
+          <height>81</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>24</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Tomatoes</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="pageCucumber">
+       <widget class="QLabel" name="lblCucumberTitle">
+        <property name="geometry">
+         <rect>
+          <x>100</x>
+          <y>90</y>
+          <width>231</width>
+          <height>91</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>24</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Cucumbers</string>
+        </property>
+       </widget>
+      </widget>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="page_3">
+     <widget class="QPushButton" name="btnReturn_2">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>40</y>
         <width>80</width>
         <height>18</height>
        </rect>
